<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/save_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".SaveActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <TextView
                android:id="@+id/save_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/save_location"
                android:textSize="30dp"/>

        <EditText
                android:id="@+id/location_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/location_name"
                android:inputType="text"/>

        <EditText
                android:id="@+id/location_lat_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/latitude"
                android:inputType="numberDecimal" />

        <EditText
                android:id="@+id/location_lng_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/longitude"
                android:inputType="numberDecimal" />

        <Button
                android:id="@+id/save_location_btn"
                android:text="@string/save_location_btn"
                android:layout_marginTop="20dp"
                android:background="@color/btnColor"
                style="@style/Widget.AppCompat.Button.Colored"
                android:width="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>