<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/main_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="4">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <TextView
                android:id="@+id/welcome_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/welcome_message"
                android:textSize="30dp"/>

        <TextView
                android:id="@+id/title_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/login_details_title"
                android:textSize="30dp"/>

        <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signed_out" />

        <TextView
                android:id="@+id/detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Firebase User ID: 123456789abc" />

        <Button
                android:id="@+id/open_map_btn"
                android:text="@string/open_map"
                android:layout_marginTop="20dp"
                android:background="@color/btnColor"
                style="@style/Widget.AppCompat.Button.Colored"
                android:width="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

    </LinearLayout>


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

        <LinearLayout
                android:id="@+id/emailPasswordFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

            <EditText
                    android:id="@+id/login_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"/>

            <EditText
                    android:id="@+id/login_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/login_create_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailPasswordFields"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

            <Button
                    android:id="@+id/login_btn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="@string/login"
                    android:background="@color/btnColor" />

            <Button
                    android:id="@+id/create_account_btn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="@string/create_account"
                    android:background="@color/btnColor" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/signedInButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:visibility="gone"
                android:weightSum="2.0">

            <Button
                    android:id="@+id/logout_btn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:layout_margin="5dp"
                    android:text="@string/logout"
                    android:background="@color/btnColor" />

            <Button
                    android:id="@+id/verify_email_btn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:layout_margin="5dp"
                    android:text="@string/verify_email"
                    android:background="@color/btnColor" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>