<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".SaveActivity"
              tools:showIn="@layout/activity_save">>

    <TextView
            android:id="@+id/save_heading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/save_location"
            android:textSize="30dp"/>

    <ListView
            android:id="@+id/locations_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/footer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_alignParentTop="true" />

    <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            android:layout_alignParentBottom="true">

        <ImageButton
                android:id="@+id/add_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="end"
                app:srcCompat="@android:drawable/ic_menu_add"/>

        <EditText
                android:id="@+id/new_location_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/add_btn"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"/>

    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <EditText
                android:id="@+id/location_lat_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/latitude"
                android:inputType="numberDecimal" />

        <EditText
                android:id="@+id/location_lng_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/longitude"
                android:inputType="numberDecimal" />

        <Button
                android:id="@+id/save_location_btn"
                android:text="@string/save_location_btn"
                android:layout_marginTop="20dp"
                android:background="@color/btnColor"
                style="@style/Widget.AppCompat.Button.Colored"
                android:width="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>